fixed project titles overflowing over usernames and remix info

--- a/static/style/project.css
+++ b/static/style/project.css
@@ -183,7 +183,8 @@ img.collection-thumbnail {
 
 .collection .title h1,
 .project.big .title h1 {
-    display: inline;
+    display: inline-block;
+    margin: 0;
 }
 
 .collection .title {
